--- a/Website/index.html
+++ b/Website/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: My website
-subtitle: This is where I will tell my friends way too much about me
+title: SCCM Zone
+subtitle: We ❤ Configuration Management and Scripting :)
 use-site-title: true
 ---
 
